--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Import Coffee
 description: 
 baseurl: "https://www.blog.importcoffee.es" # the subpath of your site, e.g. /blog
-url: "https://www.blog.importcoffee.es/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.blog.importcoffee.es" # the base hostname & protocol for your site, e.g. http://example.com
 
 
 #-------------------------------
